--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.database=${env.MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
 server.servlet.context-path=/api/v1
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
